--- a/src/scss/blocks/single-task-location.scss
+++ b/src/scss/blocks/single-task-location.scss
@@ -60,6 +60,7 @@
 	overflow: hidden;
 	overflow-y: auto;
 	scrollbar-width: none;
+	padding-bottom: remy(24);
 	&::-webkit-scrollbar{display: none;}
 }
 .hide-details__open{
