--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -13,7 +13,7 @@ html(lang="ru")
 		link(rel="stylesheet", href="css/main.css")
 		title !{title}
 		
-	body
+	body.ios-device
 		
 		block content
 		
