--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,5 +26,6 @@
 
 @import "blocks/circle-progress";
 @import "blocks/drop-filter";
+@import "blocks/productiviti-card";
 @import "pages/rating-page";
 
