--- a/src/pug/pages/rating-page.pug
+++ b/src/pug/pages/rating-page.pug
@@ -90,7 +90,7 @@ block content
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a.active(href="monitoring.html")
+			a(href="monitoring.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
@@ -98,7 +98,7 @@ block content
 				svg.svg-task
 					use(href="./img/spriteSvg.svg#svg-task")
 				span Текущ задача
-			a(href="rating-page.html")
+			a.active(href="rating-page.html")
 				svg.svg-rating
 					use(href="./img/spriteSvg.svg#svg-rating")
 				span Рейтинг
