--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -42,7 +42,7 @@ block content
                 
 				.tc__footer
 					a(href="single-task-page.html" ).btn Принять
-					a(href="#!").link-right Чат с оператором
+					a(href="chat-page.html").link-right Чат с оператором
 					
 					
 					button.icon-link.btn-cancel
