--- a/src/scss/base/icons.scss
+++ b/src/scss/base/icons.scss
@@ -68,3 +68,22 @@ svg.svg-profile{
 	
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3e%3ccircle cx='12' cy='12' r='10' stroke='%23007AFF' stroke-width='1.5'/%3e%3cpath d='M8.5 12.5L10.5 14.5L15.5 9.5' stroke='%23007AFF' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
 }
+.db-check {
+	width: remy(17);
+	height: remy(17);
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' viewBox='0 0 17 17' fill='none'%3e%3cpath d='M2.83398 8.1375L5.06017 10.6875L10.6257 4.3125' stroke='%23007AFF' stroke-linecap='round' stroke-linejoin='round'/%3e%3cpath d='M14.166 4.35693L8.09441 10.7319L7.79102 10.3335' stroke='%23007AFF' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e ");
+}
+.send-icon {
+	transition: .3s;
+	width: remy(37);
+	height: remy(37);
+	background-size: remy(18);
+	background-color: $accent;
+	border-radius: 50%;
+	cursor: pointer;
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='18' height='14' viewBox='0 0 18 14' fill='none'%3e%3cpath d='M1 7H17M17 7L11 1M17 7L11 13' stroke='white' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e ");
+
+	&:hover {
+		background-color: lighten($accent, 10%);
+	}
+}
