--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "base/icons";
 @import "base/buttons";
 
+@import "blocks/form";
 @import "blocks/notify-header";
 @import "blocks/nav-menu";
 @import "blocks/tabs";
@@ -30,5 +31,6 @@
 @import "pages/rating-page";
 
 @import "pages/chat-page";
+@import "pages/profile";
 
-@import "blocks/form";
+
