--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -34,10 +34,11 @@
 		}
 	}
 }
+.link-right.link-right--big:after,
 .link-left.link-left--big:before{
 	width: remy(24);
 	height:remy(24);
-	background-size:remy(16);
+	background-size:remy(24);
 }
 .link-right{
 	position: relative;
