--- a/src/pug/pages/profile-settings.pug
+++ b/src/pug/pages/profile-settings.pug
@@ -58,7 +58,7 @@ block content
 							.user-location__input
 								input(type="text" readonly value="Московская область")
 						
-						a(href="").link-right.link-right--big
+						a(href="profile-location.html").link-right.link-right--big
 
 			.flex-center
 				a(href="#!").icon-link.log-out-link
@@ -85,5 +85,6 @@ block content
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
 
+	
 block variables
 	-var title = "Профиль пользователя";
