--- a/src/pug/pages/rating-page.pug
+++ b/src/pug/pages/rating-page.pug
@@ -26,24 +26,24 @@ block content
 						.title-20 Статистика
 						
 						//======== DROP-FILTER =======
-						.drop-filter.drop-filter-period
-							.drop-filter__input
+						.drop-filter.custom-drop.drop-filter-period
+							.custom-drop__input
 								input(type="text" readonly value="Весь период")
 							
-							.drop-filter__list
+							.custom-drop__list
 								ul
-									li.drop-filter__item
+									li.custom-drop__item
 										a(href="#!") Весь период
 
-									li.drop-filter__item
+									li.custom-drop__item
 										a(href="#!") Год
-									li.drop-filter__item
+									li.custom-drop__item
 										a(href="#!") Полугодие
-									li.drop-filter__item
+									li.custom-drop__item
 										a(href="#!") Квартал
-									li.drop-filter__item
+									li.custom-drop__item
 										a(href="#!") Месяц
-									li.drop-filter__item
+									li.custom-drop__item
 										a(href="#!") Неделя
 					
 					.diagram-card__chart
