--- a/src/scss/base/buttons.scss
+++ b/src/scss/base/buttons.scss
@@ -62,3 +62,10 @@
 .btn-back{
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3e%3cpath d='M15 5L9 12L15 19' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
 }
+.search-btn{
+	display: inline-block;
+	width: remy(40);
+	height: remy(40);
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 19 19' fill='none'%3e%3cpath d='M8.70833 15.0417C12.2061 15.0417 15.0417 12.2061 15.0417 8.70833C15.0417 5.21053 12.2061 2.375 8.70833 2.375C5.21053 2.375 2.375 5.21053 2.375 8.70833C2.375 12.2061 5.21053 15.0417 8.70833 15.0417Z' stroke='%23272727' stroke-linecap='round' stroke-linejoin='round'/%3e%3cpath d='M16.6254 16.6249L13.1816 13.1812' stroke='%23272727' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+	background-size: remy(19);
+}
