--- a/src/pug/pages/profile-page.pug
+++ b/src/pug/pages/profile-page.pug
@@ -34,7 +34,7 @@ block content
 						.user-location__input
 							input(type="text" readonly value="Московская область")
 					
-					a(href="").link-right.link-right--big
+					a(href="profile-location.html").link-right.link-right--big
 
 			//======== Уведомления  ========
 			.simple-card.user-notice
@@ -44,7 +44,7 @@ block content
 							use(href="./img/spriteSvg.svg#svg-notify")
 						p Настройка уведомлений
 					
-					a(href="").link-right.link-right--big
+					a(href="profile-notice.html").link-right.link-right--big
 	
 	//============= FOOTER =============
 	footer.nav-menu-panel
