--- a/src/pug/pages/profile-settings.pug
+++ b/src/pug/pages/profile-settings.pug
@@ -43,7 +43,7 @@ block content
 								use(href="./img/spriteSvg.svg#svg-notify")
 							p Настройка уведомлений
 						
-						a(href="").link-right.link-right--big
+						a(href="profile-notice.html").link-right.link-right--big
 			
 			
 			//======== Где получать заказы? ========
