--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,5 +34,4 @@
 @import "pages/profile";
 @import "pages/profile-settings";
 @import "pages/profile-location";
-
-
+@import "pages/profile-notice";
