--- a/src/pug/pages/profile-notice.pug
+++ b/src/pug/pages/profile-notice.pug
@@ -7,7 +7,7 @@ block content
 				a(href="profile-page.html").link-left Назад
 				h1.h1 Уведомления
 				.header-content__abs
-					a(href="notifications.html").btn-settings
+					a(href="profile-notice-settings.html").btn-settings
 						svg.svg-settings
 							use(href="./img/spriteSvg.svg#svg-settings")
 
@@ -89,7 +89,7 @@ block content
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a(href="monitoring.html")
+			a(href="index.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
