--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -4,7 +4,7 @@ block content
 	header.header.header-sticky
 		.container
 			.header-content
-				a(href="monitoring.html").link-left Назад
+				a(href="index.html").link-left Назад
 				.header-content__abs
 					a(href="notifications.html").btn-notify
 						span.label-num 3
@@ -52,7 +52,7 @@ block content
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a.active(href="monitoring.html")
+			a.active(href="index.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
