--- a/src/pug/pages/task-page-finish-work-3.pug
+++ b/src/pug/pages/task-page-finish-work-3.pug
@@ -56,7 +56,7 @@ block content
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a(href="monitoring.html")
+			a(href="index.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
