--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -1,7 +1,7 @@
 //========== footer ==========
 footer.nav-menu-panel
 	nav.nav-menu
-		a.active(href="monitoring.html")
+		a.active(href="index.html")
 			svg.svg-monitoring
 				use(href="./img/spriteSvg.svg#svg-monitoring")
 			span Мониторинг
