--- a/src/scss/base/icons.scss
+++ b/src/scss/base/icons.scss
@@ -103,3 +103,8 @@ svg.svg-pin{
 	height: remy(24);
 	fill: transparent;
 }
+.svg-sms, .svg-mail{
+	fill: transparent;
+	width: remy(24);
+	height: remy(25);
+}
