--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,8 @@
 
 @import "sections/header";
 
+@import "pages/authoriz-form";
+
 @import "pages/monitoring";
 
 @import "pages/single-task-page";
