--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -22,5 +22,6 @@
 	width: remy(22);
 	height: remy(22);
 }
+.user-notice:visited{color: $text;}
 .profile-main{padding-top: 1rem;}
 .profile-main .simple-card+ .simple-card{margin-top:  1rem;}
