--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -154,12 +154,17 @@ main{
 	&>*{width: 100%;}
 
 }
+.d-flex,
 .flex-center,
 .flex-between{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	column-gap: remy(12);
+}
+.d-flex{
+	justify-content: flex-start;
+	column-gap:remy(24);
 }
 .flex-center{justify-content: center;}
 .base-list{
