--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -13,7 +13,7 @@ block content
 
 	main.single-task-page
 		.container
-			.task-card
+			.task-card.pb-110
 				.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 				
 				.tc__body
@@ -40,7 +40,7 @@ block content
 				
 				.tc__notice Внимание! Осталось #[span 22 ч. 29 мин.] на принятие решения по заказу
                 
-				.tc__footer
+				.tc__footer.fixed-bottom
 					a(href="single-task-page.html" ).btn Принять
 					a(href="chat-page.html").link-right Чат с оператором
 					
