--- a/src/scss/blocks/single-task-location.scss
+++ b/src/scss/blocks/single-task-location.scss
@@ -123,3 +123,15 @@
 .toggle-class.open .single-task-details{
 	transform: translateY(0);
 }
+.fixed-bottom{
+	width: remy(375);
+	background-color: #F9F9F9;
+	position: fixed;
+	bottom: remy(110);
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 2;
+}
+.pb-110{
+	padding-bottom: remy(110);
+}
