--- a/src/pug/pages/current-task-page.pug
+++ b/src/pug/pages/current-task-page.pug
@@ -26,7 +26,7 @@ block content
 					p.txt-14 Осталось времени до выезда на объект	
 			
 				//========= карточка с описанием ==========
-				.current-task-card.toggle-class.open
+				.current-task-card.toggle-class.pb-110.open
 					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 					
 					.hide-details__close.toggle-class-remove
@@ -54,7 +54,7 @@ block content
 						.tc__requir Требования к форме: требуется, выдадут на месте
 						.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
 						a(href="#!" frame-btn="location").link-right Показать на карте
-					.tc__footer
+					.tc__footer.fixed-bottom
 						a(href="single-task-page.html" ).btn Выезд на объект
 						a(href="chat-page.html" ).btn-outline.link-right
 							span Чат с оператором
