--- a/src/scss/blocks/single-task-location.scss
+++ b/src/scss/blocks/single-task-location.scss
@@ -43,7 +43,7 @@
 	transition: .3s; 
 	bottom: 0;
 	z-index: 2;
-	transform: translateY(calc(100% - remy(180)));
+	transform: translateY(calc(100% - ((100vh - 100dvh) + remy(180))));
 	&>*+* {
 		margin-top: 1rem;
 	}
@@ -62,6 +62,7 @@
 	scrollbar-width: none;
 	padding-bottom: remy(24);
 	&::-webkit-scrollbar{display: none;}
+	margin-top: remy(20);
 }
 .hide-details__open{
 	position: absolute;
@@ -124,14 +125,15 @@
 	transform: translateY(0);
 }
 .fixed-bottom{
-	width: remy(375);
+	width: remy(345);
 	background-color: #F9F9F9;
 	position: fixed;
-	bottom: remy(110);
+	padding-bottom: remy(20);
+	bottom: remy(90);
 	left: 50%;
 	transform: translateX(-50%);
 	z-index: 2;
 }
 .pb-110{
-	padding-bottom: remy(110);
+	padding-bottom: remy(110)!important;
 }
