--- a/src/pug/pages/current-task-page.pug
+++ b/src/pug/pages/current-task-page.pug
@@ -55,7 +55,7 @@ block content
 						.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
 						a(href="#!" frame-btn="location").link-right Показать на карте
 					.tc__footer.fixed-bottom
-						a(href="single-task-page.html" ).btn Выезд на объект
+						a(href="#!" frame-btn="location").btn Выезд на объект
 						a(href="chat-page.html" ).btn-outline.link-right
 							span Чат с оператором
 						
