--- a/src/pug/pages/current-task-page.pug
+++ b/src/pug/pages/current-task-page.pug
@@ -53,7 +53,9 @@ block content
 						
 						.tc__requir Требования к форме: требуется, выдадут на месте
 						.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
-						a(href="#!" frame-btn="location").link-right Показать на карте
+						
+						a(href="location-page.html").link-right Показать на карте
+					
 					.tc__footer.fixed-bottom
 						a(href="#!" frame-btn="location").btn Выезд на объект
 						a(href="chat-page.html" ).btn-outline.link-right
