--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -34,7 +34,7 @@ block content
 					.tc__requir Требования к форме: требуется, выдадут на месте
 					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
 					
-					a(href="#!" frame-btn="location").link-right Показать на карте
+					a(href="location-page.html" ).link-right Показать на карте
 				
 				.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
 				
