--- a/src/scss/blocks/single-task-location.scss
+++ b/src/scss/blocks/single-task-location.scss
@@ -39,7 +39,7 @@
 }
 .single-task-details {
 	position: absolute;
-	padding: remy(24) remy(16) remy(36);
+	padding: remy(24) remy(16) 4.25rem;
 	transition: .3s; 
 	bottom: 0;
 	z-index: 2;
