--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -16,27 +16,10 @@ block content
 			.task-card.pb-110
 				.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 				
-				.tc__body
-					.tc__state Статус: #[span в процессе]
-
-					.tc__price Потенциальная оплата: #[span 20 000] ₽ 
 					
-					.tc__date
-						.tc__cell Дата начало: #[span 08.10.23] в 
-						.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
-
-					.tc__time
-						.time-start Время начала труд. дня: #[span  9:00] 
-						.time-finish Время окончания  труд. дня: #[span 19:00]
-					
-					.tc__contractor Кол-во людей: #[span 6]
-					
-					.tc__requir Требования к форме: требуется, выдадут на месте
-					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
-					
-					a(href="location-page.html" ).link-right Показать на карте
+				a(href="location-page.html" ).link-right Показать на карте
 				
-				.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
+				button.btn-outline(frame-btn="task-description") Подробнее о задаче
 				
 				.tc__notice Внимание! Осталось #[span 22 ч. 29 мин.] на принятие решения по заказу
                 
@@ -69,49 +52,26 @@ block content
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
 
-	//========== вкладка На карте =========
-
-	.single-task-location.toggle-class(frame-modal="location")
-		.custom-container.flex-column
-			.fix-header
-				button.btn-back.btn-round(frame-close)
-			//========= map ==========
-			.single-task-map
-				script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&width=100%&height=100%&lang=ru_RU&scroll=false')
-			
-			//========= карточка с описанием ==========
-			.single-task-details.box-shadow
-				//==========видимая часть ==========
-				.visible-details
-					.hide-details__open.toggle-class-add#swipe1
-					
-					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
-					
-					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
-
-				//========== скрытый блок ==========
-				.hide-details.tc__body
-					.hide-details__close.toggle-class-remove
-						p Подробнее о задаче
-						svg.svg-chevron
-							use(href="./img/spriteSvg.svg#svg-chevron")
-						
-					//=========== task description =========
-					.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
-					
-					.tc__price Потенциальная оплата: #[span 20 000] ₽ 
+	//======== task-description popUp =========
+	.task-description.modal-frame-wrapper(frame-modal="task-description")
+		.modal-frame
+			.icon-close(frame-close)
+			.tc__body
+				//=========== task description =========
+				.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
 				
-					.tc__date
-						.tc__cell Дата начало: #[span 08.10.23] в 
-						.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
+				.tc__price Потенциальная оплата: #[span 20 000] ₽ 
 
-					.tc__time
-						.time-start Время начала труд. дня: #[span  9:00] 
-						.time-finish Время окончания  труд. дня: #[span 19:00]
-					
-					.tc__contractor Кол-во людей: #[span 6]
-					
-					.tc__requir Требования к форме: требуется, выдадут на месте
+				.tc__date
+					.tc__cell Дата начало: #[span 08.10.23] в 
+					.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
 
+				.tc__time
+					.time-start Время начала труд. дня: #[span  9:00] 
+					.time-finish Время окончания  труд. дня: #[span 19:00]
+				
+				.tc__contractor Кол-во людей: #[span 6]
+				
+				.tc__requir Требования к форме: требуется, выдадут на месте
 block variables
 	-var title = "Задача. Подробнее";
